[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dap"
version = "3.0.0"
description = "Python bindings for DAP SDK - High-performance blockchain and cryptographic library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "DAP Team", email = "support@demlabs.net"}
]
keywords = ["blockchain", "cryptography", "dap", "sdk", "cellframe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking"
]

[project.urls]
Homepage = "https://cellframe.net"
Documentation = "https://docs.cellframe.net"
Repository = "https://gitlab.demlabs.net/cellframe"
Issues = "https://gitlab.demlabs.net/cellframe/cellframe-node/-/issues"

[tool.setuptools]
py-modules = ["python_dap"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dap*"]

[tool.setuptools.package-data]
"dap" = ["*.so"] 